# beeper-now

./: developing.md  mip.ps1  pyproject.toml  readme.md  reference.md
docs/: capture-delay.sal
firmware/: readme.md
old_stuff/: debug_interrupt_config.py  debug_motion.py  interrupt_test.py  main_backup.py  main_xxxx.py  motion_detection.py  mpu6050.py  mpu6050_motion.py  polling_motion_detection.py  simple_motion_test.py  test_motion_algorithm.py  working_motion_detection.py
src/: abeeper.py  boot.py  config.py  device.py  inactivity.py  main.py  main_beep.py  net_id.py  receive.py  transmit.py  wifi.py
src/lib/: aiorepl.py
src/lib/primitives/: __init__.py  broker.py  events.py  semaphore.py  sw_array.py  switch.py
